--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Copy Hidden Code</title>
+    <title>PAYPAL</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Copy the Hidden Code</h1>
+        <h1 class="title">PAYPAL</h1>
         <div class="code-box">
-            <input type="password" id="code" value="123456" readonly>
-            <button id="copy-btn">Copy</button>
+            <input type="password" id="code" value="GDKDDKDKKDJJD" readonly>
+            <button id="copy-btn">DONE</button>
         </div>
         <p id="success-message" class="hidden">Code copied successfully!</p>
     </div>
