--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAYPAL</title>
+    <title>paypal</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="title">PAYPAL</h1>
+        <h1 class="title">PAYPAL ACCOUNT</h1>
         <div class="code-box">
-            <input type="password" id="code" value="GDKDDKDKKDJJD" readonly>
+            <input type="password" id="code" value="162478" readonly>
             <button id="copy-btn">DONE</button>
         </div>
-        <p id="success-message" class="hidden">Code copied successfully!</p>
+        <button id="confirm-btn" class="hidden">Confirm</button>
+        <p id="success-message" class="hidden">Done Successfully!</p>
     </div>
     <script src="script.js"></script>
 </body>
