--- a/page2.html
+++ b/page2.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1 class="title">MONEY</h1>
         <div class="image-container">
-            <img src="jk.png" alt="Sample Image" class="center-image" id="dynamic-image">
+            <img src="pay.png" alt="Sample Image" class="center-image" id="dynamic-image">
         </div>
         <button id="copy-btn" class="button blue">OPEN</button>
         <div id="progress-bar" class="hidden"></div>
@@ -40,7 +40,7 @@
 
                     // Change the image
                     const image = document.getElementById('dynamic-image');
-                    image.src = 'jk2.png';
+                    image.src = 'check.png';
 
                     // Show the complete text
                     const completeText = document.getElementById('complete-text');
