--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1 class="title">IMTER MONEY</h1>
         <div class="image-container">
-            <img src="image1.jpg" alt="Sample Image" class="center-image">
+            <img src="cc.png" alt="Sample Image" class="center-image">
         </div>
         <button id="copy-btn" class="button blue">DONE</button>
         <button id="ok-btn" class="button green hidden">CRONFRIM</button>
