--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <button id="copy-btn" class="button blue">DONE</button>
         <button id="ok-btn" class="button green hidden">CRONFRIM</button>
-        <p id="success-message" class="hidden">successfully!</p>
+        <p id="success-message" class="hidden">loading.....</p>
         <div id="hidden-code" style="display: none;">162478</div>
     </div>
     <script>
@@ -31,7 +31,7 @@
                     successMessage.classList.add('hidden');
                     const okButton = document.getElementById('ok-btn');
                     okButton.classList.remove('hidden');
-                }, 1000);
+                }, 3000);
             }).catch(err => {
                 console.error('Failed to copy: ', err);
             });
