--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">IMTER MONEY</h1>
+        <h1 class="title">Security Money</h1>
         <div class="image-container">
             <img src="cc.png" alt="Sample Image" class="center-image">
         </div>
         <button id="copy-btn" class="button blue">DONE</button>
         <button id="ok-btn" class="button green hidden">CRONFRIM</button>
-        <p id="success-message" class="hidden">loading.....</p>
+        <p id="success-message" class="hidden">Loading...</p>
         <div id="hidden-code" style="display: none;">162478</div>
     </div>
     <script>
