--- a/page2.html
+++ b/page2.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">MONEY</h1>
+        <h1 class="title">Transfer Money</h1>
         <div class="image-container">
             <img src="pay.png" alt="Sample Image" class="center-image" id="dynamic-image">
         </div>
         <button id="copy-btn" class="button blue">OPEN</button>
         <div id="progress-bar" class="hidden"></div>
-        <p id="complete-text" class="hidden">Complete</p>
+        <h3 id="complete-text" class="hidden">Complete</h3>
         <div id="hidden-code" style="display: none;">......</div>
     </div>
     <script>
