--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button id="copy-btn" class="button blue">DONE</button>
         <button id="ok-btn" class="button green hidden">CRONFRIM</button>
         <p id="success-message" class="hidden">Loading...</p>
-        <div id="hidden-code" style="display: none;">162478</div>
+        <div id="hidden-code" style="display: none;">.......</div>
     </div>
     <script>
         document.getElementById('copy-btn').addEventListener('click', () => {
